--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-PORT = 8000
+DATABASE_ENV=development
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_NAME="ecommerce"
+DATABASE_USERNAME="root"
+DATABASE_PASSWORD="10062001"
+JWT_SECRET_KEY="access_token"
