--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@ DATABASE_PORT=3306
 DATABASE_NAME="ecommerce"
 DATABASE_USERNAME="root"
 DATABASE_PASSWORD="10062001"
-JWT_SECRET_KEY="access_token"
+JWT_SECRET="access_token"
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
