--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.37.3",
-    "uniqid": "^5.4.0"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "uniqid": "^5.4.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
