--- a/swagger/paths.yaml
+++ b/swagger/paths.yaml
@@ -14,7 +14,7 @@ paths:
                properties:
                 email:
                  type: string
-                 example: "manhnv2k1@gmail.com"
+                 example: "dinomanh123@gmail.com"
                 password:
                  type: string
                  example: "12345678"
