--- a/swagger/paths.yaml
+++ b/swagger/paths.yaml
@@ -1,9 +1,9 @@
 paths:
-   /auth/sign-in:
-    post:
+  /auth/sign-in:
+     post:
       tags:
         - auth
-      description: Sign In to Coding Blog Website
+      description: Sign In 
       operationId: sign-in
       requestBody:
         description: Sign In Information
@@ -51,22 +51,19 @@ paths:
           content:
            application/json:
             schema:
-              type: object
-              properties:
-               success:
-                 type: string
-                 example: false
-               status:
-                 type: integer
-                 example: 404
-               message:
-                 type: string
-                 example: "Email not found"  
-   /auth/sign-up:
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'
+             
+  /auth/sign-up:
     post:
       tags:
         - auth
-      description: Sign Up for Coding Blog Website
+      description: Sign Up 
       operationId: sign-up
       requestBody:
         description: Sign Up Information
@@ -78,13 +75,13 @@ paths:
               properties:
                 email:
                   type: string
-                  example: "user@gmail.com"
+                  example: "nhatminh123@gmail.com"
                 password:
                   type: string
-                  example: "yourpassword"
+                  example: "12345678"
                 confirmPassword:
                   type: string
-                  example: "yourpassword"
+                  example: "12345678"
       responses:
         '200':
           description: Sign up successfully!
@@ -96,33 +93,30 @@ paths:
                 success:
                  type: string
                  example: true
-                data:
-                 type: object
-                 properties:
-                  user:
-                    type: object
-                    $ref: '#/components/schemas/User'
                 status:
                  type: integer
                  example: 200
                 message:
                  type: string
                  example: "ok"
+                data:
+                 type: object
+                 properties:
+                  user:
+                    type: object
+                    $ref: '#/components/schemas/User'
         '404':
-          description: Invalid Input 
+          description: Not Found
           content:
            application/json:
             schema:
-              type: object
-              properties:
-               success:
-                 type: string
-                 example: false
-               status:
-                 type: integer
-                 example: 404
-               message:
-                 type: string
-                 example: "Email is already in used"  
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'
+        
 
  
