--- a/swagger/components.yaml
+++ b/swagger/components.yaml
@@ -6,31 +6,37 @@ components:
       id:
         type: integer
         format: int64
+        example: 1
       username:
         type: string
         maxLength: 30
+        example: "dinomanh"
+      fullname:
+         type: string
+         maxLength: 100
+         example: "Nguyễn Viết Mạnh"
+      role:
+        type: string
+        example: user
       email:
         type: string
         format: email
         maxLength: 30
-      role:
+        example: "manhnguyen123@gmail.com"
+      phone:
         type: string
-        example: owner
-      password:
+        example: "0866020143"
+      address:
         type: string
+        example: "134 Trương Định,Hai Bà Trưng, Hà Nội"
       created_at:
         type: string
         format: date-time
+        example: "2024-05-06T12:00:00Z"
       updated_at:
         type: string
         format: date-time
-     example:
-      id: 1
-      username: "john_doe@gmail.com"
-      email: "john_doe@gmail.com"
-      role: "owner"
-      created_at: "2024-05-06T12:00:00Z"
-      updated_at: "2024-05-06T12:00:00Z"
+        example: 2024-05-06T12:00:00Z"
     ErrorResponse:  
      type: object
      properties:
@@ -55,9 +61,27 @@ components:
        message:
         type: string
         example: "Error Validate"  
-   
-  securitySchemes:
-    BearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+    Category:  
+     type: object
+     properties:
+      id:
+        type: integer
+        format: int64
+        example: 1
+      name:
+        type: string
+        maxLength: 30
+        example: "Adidas"
+      created_at:
+        type: string
+        format: date-time
+        example: "2024-05-06T12:00:00Z"
+      updated_at:
+        type: string
+        format: date-time
+        example: 2024-05-06T12:00:00Z"
+  # securitySchemes:
+  #   BearerAuth:
+  #     type: http
+  #     scheme: bearer
+  #     bearerFormat: JWT
