add product api

--- a/swagger/components.yaml
+++ b/swagger/components.yaml
@@ -1,3 +1,4 @@
+
 components:
   schemas:
     User:  
@@ -80,8 +81,49 @@ components:
         type: string
         format: date-time
         example: 2024-05-06T12:00:00Z"
-  # securitySchemes:
-  #   BearerAuth:
-  #     type: http
-  #     scheme: bearer
-  #     bearerFormat: JWT
+    DetailsProduct:  
+     type: object
+     properties:
+      id:
+        type: integer
+        format: int64
+        example: 1
+      name:
+        type: string
+        example: Ultraboost - White/Black
+      description:
+        type: string
+        example: Inspired by the original low-profile tennis shoe, the Nike Killshot 2 updates the upper with a variety of textured leathers to create a fresh look. From soft suedes to smooth leathers with the perfect sheen, it's court-side attitude with a modern touch.
+      seller:
+        type: string
+        example: Adidas
+      price:
+        type: number
+        format: float
+        example: 112.34
+      quantity:
+        type: integer
+        example: 1
+        default: 1
+      ratings:
+        type: number
+        minimum: 1
+        example: 4
+      stock:
+        type: number
+        example: 12
+        minimum: 1
+      img: 
+        type: string
+        example: https://bizweb.dktcdn.net/thumb/1024x1024/100/347/092/products/z-db3197-02.jpg
+      created_at:
+        type: string
+        format: date-time
+        example: "2024-05-06T12:00:00Z"
+      updated_at:
+        type: string
+        format: date-time
+        example: 2024-05-06T12:00:00Z"
+      category:
+         $ref: "#/components/schemas/Category"
+    BaseProduct:  
