--- a/swagger/paths.yaml
+++ b/swagger/paths.yaml
@@ -403,3 +403,283 @@ paths:
            application/json:
             schema:
               $ref: '#/components/schemas/ValidateResponse'
+   /products:
+    get:
+      tags:
+        - product
+      description: Get all product
+      operationId: all-product
+      responses:
+        '200':
+          description: Get all product successfully
+          content:
+           application/json:
+            schema:
+               type: object
+               properties:
+                success:
+                 type: string
+                 example: true
+                data:
+                 type: array
+                 items:
+                    type: object
+                    $ref: '#/components/schemas/DetailsProduct'
+                status:
+                 type: integer
+                 example: 200
+                message:
+                 type: string
+                 example: "ok"
+                
+        '404':
+          description: Not Found
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'
+   /products/{productId}:
+    get:
+      tags:
+        - product
+      description: Get details product
+      operationId: details-product
+      parameters:
+        - in: path
+          name: productId  
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+          description: The Id of the product to get information
+      responses:
+        '200':
+          description: Get details product successfully
+          content:
+           application/json:
+            schema:
+               type: object
+               properties:
+                success:
+                 type: string
+                 example: true
+                data:
+                 type: object
+                 $ref: '#/components/schemas/DetailsProduct'
+                status:
+                 type: integer
+                 example: 200
+                message:
+                 type: string
+                 example: "ok"
+                
+        '404':
+          description: Not Found
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'
+   /products/list/{categoryId}:
+    get:
+      tags:
+        - product
+      description: Get list of products identified by categoryId.
+      operationId: list-product
+      parameters:
+        - in: path
+          name: categoryId  
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+          description: The Id of the category to get information
+      responses:
+        '200':
+          description: Get list of products successfully
+          content:
+           application/json:
+            schema:
+               type: object
+               properties:
+                success:
+                 type: string
+                 example: true
+                data:
+                 type: array
+                 items:
+                  type: object
+                  allOf:
+                  - type: object
+                    properties:
+                     id:
+                       type: integer
+                       format: int64
+                       example: 1
+                     category_id:
+                       type: integer
+                       example: "4"
+                  - $ref: "#/components/schemas/BaseProduct"
+                  - type: object
+                    properties:
+                      created_at:
+                       type: string
+                       format: date-time
+                       example: "2024-05-06T12:00:00Z"
+                      updated_at:
+                       type: string
+                       format: date-time
+                       example: 2024-05-06T12:00:00Z"
+                  
+          
+                status:
+                 type: integer
+                 example: 200
+                message:
+                 type: string
+                 example: "ok"
+                
+        '404':
+          description: Not Found
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'
+   /products/create:
+    post:
+      tags:
+        - product
+      description: Create a new product.
+      operationId: create-product
+      requestBody:
+        description: Product Information
+        required: true
+        content:
+          application/json:
+            schema:
+             type: object
+             allOf:
+              - type: object
+                properties:
+                  categoryId:
+                    type: integer
+                    format: int64
+                    example: 1
+              - $ref: "#/components/schemas/BaseProduct"
+            
+                 
+      responses:
+        '200':
+          description: Post created successfully
+          content:
+           application/json:
+            schema:
+               type: object
+               properties:
+                success:
+                 type: string
+                 example: true
+                data:
+                 type: string
+                 example: "Post created successfully"
+                status:
+                 type: integer
+                 example: 200
+                message:
+                 type: string
+                 example: "ok"
+                
+        '404':
+          description: Not Found
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'
+   /products/update/{productId}:
+    put:
+      tags:
+        - product
+      description: Update product.
+      operationId: update-product
+      parameters:
+        - in: path
+          name: productId  
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+          description: The Id of product to update
+      requestBody:
+        description: Product Information
+        required: true
+        content:
+          application/json:
+            schema:
+             type: object
+             allOf:
+              - type: object
+                properties:
+                  categoryId:
+                    type: integer
+                    format: int64
+                    example: 1
+              - $ref: "#/components/schemas/BaseProduct"
+            
+                 
+      responses:
+        '200':
+          description: Post updated successfully
+          content:
+           application/json:
+            schema:
+               type: object
+               properties:
+                success:
+                 type: string
+                 example: true
+                data:
+                 type: string
+                 example: "Post updated successfully"
+                status:
+                 type: integer
+                 example: 200
+                message:
+                 type: string
+                 example: "ok"
+                
+        '404':
+          description: Not Found
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'
+   /products/delete/{productId}:
