--- a/swagger/paths.yaml
+++ b/swagger/paths.yaml
@@ -683,3 +683,50 @@ paths:
             schema:
               $ref: '#/components/schemas/ValidateResponse'
    /products/delete/{productId}:
+    delete:
+      tags:
+        - product
+      description: Delete product.
+      operationId: delete-product
+      parameters:
+        - in: path
+          name: productId  
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+          description: The Id of product to delete
+                 
+      responses:
+        '200':
+          description: Post deleted successfully
+          content:
+           application/json:
+            schema:
+               type: object
+               properties:
+                success:
+                 type: string
+                 example: true
+                data:
+                 type: string
+                 example: "Post deleted successfully"
+                status:
+                 type: integer
+                 example: 200
+                message:
+                 type: string
+                 example: "ok"
+                
+        '404':
+          description: Not Found
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Error Validate
+          content:
+           application/json:
+            schema:
+              $ref: '#/components/schemas/ValidateResponse'
