--- a/swagger/components.yaml
+++ b/swagger/components.yaml
@@ -1,5 +1,34 @@
 components:
   schemas:
+    BaseUser:
+     type: object
+     properties:
+      id:
+        type: integer
+        format: int64
+        example: 1
+      username:
+        type: string
+        maxLength: 30
+        example: "dinomanh"
+      fullname:
+         type: string
+         maxLength: 100
+         example: "Nguyễn Viết Mạnh"
+      role:
+        type: string
+        example: user
+      email:
+        type: string
+        format: email
+        maxLength: 30
+        example: "manhnguyen123@gmail.com"
+      phone:
+        type: string
+        example: "0866020143"
+      address:
+        type: string
+        example: "134 Trương Định,Hai Bà Trưng, Hà Nội"
     User:  
      type: object
      properties:
@@ -156,26 +185,30 @@ components:
       img: 
         type: string
         example: https://bizweb.dktcdn.net/thumb/1024x1024/100/347/092/products/z-db3197-02.jpg
-    Order:  
+    BaseOrder:  
      type: object
      properties:
-      id:
-        type: integer
-        format: int64
-        example: 4
-      payment_method:
+      paymentMethod:
          type: string
          example: "banking"
       amount:
          type: number
          example: "1254.24"
-      status: 
-         type: string
-         example: "created"
-      name:
-        type: string
-        maxLength: 30
-        example: "Adidas"
+    DetailsOrder:  
+     type: object
+     properties:
+      id: 
+        type: integer
+        example: 2
+      product_id:
+        type: integer
+        example: 71
+      price:
+        type: number
+        example: 420
+      quantity:
+        type: integer
+        example: 5
       created_at:
         type: string
         format: date-time
@@ -184,9 +217,35 @@ components:
         type: string
         format: date-time
         example: 2024-05-06T12:00:00Z"
-      ordered_by:
+      product:  
+        type: object
+        $ref: "#/components/schemas/BaseProduct"
+    Order:
+       type: object
+       properties:
+        id: 
+          type: integer
+          example: 2
+        payment_method:
+          type: string
+          example: "banking"
+        amount:
+          type: number
+          example: "1254.24"
+        status: 
+          type: string
+          example: "created"
+        created_at:
+          type: string
+          format: date-time
+          example: "2024-05-06T12:00:00Z"
+        updated_at:
+          type: string
+          format: date-time
+          example: 2024-05-06T12:00:00Z"
+        ordered_by:
          type: object
-         $ref: "#/components/schemas/User"
+         $ref: "#/components/schemas/BaseUser"
     Cart:  
      type: object
      properties:
@@ -200,6 +259,9 @@ components:
       product: 
         type: object
         $ref: "#/components/schemas/BaseProduct"
+    # DetailsOrder:
+
+
   securitySchemes:
     BearerAuth:
       type: http
