--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "google-auth-library": "^9.9.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "moongoose": "^0.0.5",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
